docs(jsbattle-server): add examples to api docs
